# Persa_Engine

./: Cargo.toml  README.md  perft_diff.sh
src/: board_components.rs  constants.rs  debug.rs  eveluation.rs  helper_functions.rs  helper_macros.rs  lib.rs  main.rs  uci.rs
src/pieces/: helper_functions.rs  mod.rs  pieces_controller.rs  pieces_macros.rs  pieces_structs.rs  tables.rs
src/pieces/bishop/: bishop_table.rs  mod.rs
src/pieces/king/: king_table.rs  mod.rs
src/pieces/knight/: knight_table.rs  mod.rs
src/pieces/pawn/: mod.rs  pawn_table.rs
src/pieces/queen/: mod.rs  queen_table.rs
src/pieces/rook/: mod.rs  rook_table.rs
src/tables/: basic_tables.rs  bishop_table.rs  mod.rs  pawn_table.rs  rook_table.rs
tests/: general_tests.rs  search_tests.rs  some_test.rs
