[package]
name = "persa_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
overflow-checks = false
opt-level = 1

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3

[dependencies]
