[package]
name = "persa_chess"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
overflow-checks = false
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3

[dependencies]

